Fleshing out CV content

--- a/content/cv/active/0050-web.md
+++ b/content/cv/active/0050-web.md
@@ -10,10 +10,10 @@ tech:
 
 Developed and supported various applications for businesses, municipalities, and individuals.
 
-Essign
+**Essign** (2006 – 2020) – online homework assignments for K-12 teachers and students
 
-ThermaCalc
+**ThermaCalc** (2010 – Present) – modelling vaporizer performance for customers and sales
 
-EquipNV
+**EquipNV** (2016 – Present) – municipality inventory tracking
 
-Beluga
+**Beluga** (2020 – Present) – SEC data analysis
