--- a/content/cv/past/0030-c4.md
+++ b/content/cv/past/0030-c4.md
@@ -8,5 +8,6 @@ tech:
   - IIS
 ---
 
-Developed web applications for local businesses and for internal use
-as a summer job.
+Developed web applications for local businesses and for internal use as a summer job.
+
+This was a Windows shop with client sites primarily done in ColdFusion, hosted on IIS and backed by MSSQL Server. Most internal hosting tools were implemented in ASP.NET.
