--- a/content/cv/active/0030-dnc.md
+++ b/content/cv/active/0030-dnc.md
@@ -1,9 +1,9 @@
 ---
 title: Podcast Co-Host
 subtitle: Does Not Compute
-date: 2018 – Present
+date: 2018 – 2021
 ---
 
-Recorded over 100 episodes discussing various topics around software development, including news, conferences, languages, tools, learning, and the occasional off-topic tangent.
+Recorded 150 episodes discussing various topics around software development, including news, conferences, languages, tools, learning, and the occasional off-topic tangent.
 
-[All episodes](https://dnc.show/) – [Live streaming and recordings](https://twitch.tv/dnccast)
+[All episodes](https://dnc.show/)
