--- a/content/cv/active/0040-ios.md
+++ b/content/cv/active/0040-ios.md
@@ -11,6 +11,4 @@ tech:
 
 Independently developed and supported utility applications for amateur radio operators.
 
-[WaveGuide](https://ww1x.com/waveguide) – [SOTA Goat](https://ww1x.com/sotagoat)
-
-Also supported the RemoteHamRadio native iOS app, which was necessary to support WebRTC on mobile devices.
+[SOTA Goat](https://ww1x.com/sotagoat) – WaveGuide (deprecated)
